[package]
name = "rstring"
version = "0.1.0"
authors = ["Dodo <kasper199914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
alloc_geiger = "0.1"
jemallocator = "0.3.2"

[profile.dev]
panic = "abort"